# rspostgresmcp

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: db.rs  lib.rs  main.rs  mcp_server.rs
tests/: integration_test.rs
tests/fixtures/: pagila.sql
