[package]
name = "rspostgresmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = {version ="0.1",features = ["transport-sse-server"]}
clap = {version ="4.5", features = ["derive"]}
tokio = { version = "1.34", features=["signal", "rt-multi-thread"] }
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }
