[package]
name = "rspostgresmcp"
version = "0.1.0"
edition = "2024"

# Configure the library so it can be used in tests
[lib]
name = "rspostgresmcp"
path = "src/lib.rs"

[[bin]]
name = "rspostgresmcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["transport-sse-server"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.34", features = ["signal", "rt-multi-thread", "macros"] }
anyhow = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.34", features = ["signal", "rt-multi-thread", "macros", "test-util"] }
testcontainers = "0.14"
